# SynthVox

./: .gitattributes  .gitignore  README.md  pyproject.toml
notebooks/: development.ipynb
